--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oadg",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "It is a command-line tool to generate an OpenAPI document as output by reading the provided Swagger/OpenAPI based `.json` or `.yaml` file.",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/isurfer21/openapi-docgen-cli#readme",
   "dependencies": {
     "minimist": "^1.2.5",
+    "open": "^8.2.1",
     "yaml": "^1.10.2"
   }
 }
