--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oadg",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "It is a command-line tool to generate an OpenAPI document as output by reading the provided Swagger/OpenAPI based `.json` or `.yaml` file.",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,15 @@
     "yaml": "^1.10.2"
   },
   "bin": {
-    "oadg": "./index.js"
-  }
+    "oadg": "index.js"
+  },
+  "devDependencies": {},
+  "keywords": [
+    "OpenAPI",
+    "Swagger",
+    "CLI",
+    "tool",
+    "command-line",
+    "generator"
+  ]
 }
