--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oadg",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "It is a command-line tool to generate an OpenAPI document as output by reading the provided Swagger/OpenAPI based `.json` or `.yaml` file.",
   "main": "index.js",
   "scripts": {
@@ -32,6 +32,9 @@
     "CLI",
     "tool",
     "command-line",
-    "generator"
+    "generator",
+    "json-to-yaml",
+    "yaml-to-json",
+    "converter"
   ]
 }
